--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * Warning
 
-This package is experminental! It probably has many bugs, and reports
+This package is experimental! It probably has many bugs, and reports
 of them are greatly appreciated. Consider it a proof of concept.
 
 * Overview
