--- a/README.org
+++ b/README.org
@@ -41,6 +41,16 @@ the candidates displayed vertically, you can use [[https://github.com/oantolin/i
 
 Bug reports are highly welcome and appreciated!
 
+* Screenshot
+
+This is what it looks like to use =describe-function= (bound by default
+to =C-h f=) to match =eis ff=. Notice that in this particular case =eis=
+matched as an initialism, and =ff= matched as a regexp. The completion
+UI in the screenshot is [[https://github.com/oantolin/icomplete-vertical][icomplete-vertical]] and the theme is
+Protesilaos Stavrou's lovely [[https://gitlab.com/protesilaos/modus-themes][modus-operandi]].
+
+[[images/describe-function-eis-ff.png]]
+
 * Customization
 
 ** Component matching styles
