--- a/README.org
+++ b/README.org
@@ -166,3 +166,14 @@ The components can be matched literally, as regexps, as initialisms or
 in the flex style (called "fuzzy" in prescient). In addition to
 matching, =prescient.el= also supports sorting of candidates (=orderless=
 leaves that up to the candidate source and the completion UI).
+
+* Icicles's progressive matching
+
+An effect equivalent to matching multiple components in any order can
+be achieved in completion frameworks that provide a way to restrict
+further matching to the current lists of candidates. In [[https://www.emacswiki.org/emacs/Icicles][Icicles]] this
+is called /progressive completion/ and using =S-SPC= instead of =SPC= to
+separate components will do it. (Note that Ivy has an analogous
+command, also bound to =S-SPC=, called =ivy-restrict-to-matches=, so you
+can get the effect of out of order matching without using
+=ivy--regex-ignore-order=.)
