--- a/README.org
+++ b/README.org
@@ -213,6 +213,17 @@ please file an issue or make a pull request so others can benefit from
 your effort. The functions =orderless-filter= and
 =orderless-highlight-matches= are likely to help with the integration.
 
+** Ivy
+
+To use =orderless= from Ivy add this to your Ivy configuration:
+
+#+begin_src emacs-lisp
+  (require 'orderless)
+  (cl-pushnew '(orderless--ivy-re-builder . orderless--ivy-highlight)
+              ivy-highlight-functions-alist)
+  (setq ivy-re-builders-alist '((t . orderless--ivy-re-builder)))
+#+end_src
+
 ** Selectrum
 
 To use =orderless= from Selectrum add this to your Selectrum
